--- a/index.html
+++ b/index.html
@@ -3,25 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Code Quiz!</title>
+    <title>Test your knowledge!</title>
     <link rel="stylesheet" href="./assets/style.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 </head>
-<body>
-    <div class="wrapper">
-        <h2 class="highscore">View Highscores</h2>   
-        <h1>Up for some review?</h1>
-        <br>
-        <div id="timer" class="timer">Time left: <div class="time">40</div>seconds</div>
-        <br>
-        <div class="startQ">
-        <button id="start" class="h2">Start Quiz!</button>
-        </div>
-        <div id="questions" class="qbox"><br></div>
-        <div id="answers"></div>
-    
-</div> 
-    <script src="./assets/script.js" ></script>
+<body> 
+    <h1>Up for some review?</h1>
 
+        <br>
+
+    <h4 id="timer" >Time left: <br> 40 seconds</h4>
+    
+        <br>
+
+    <div class="startQ">
+        <button id="startquiz" >Start Quiz!</button>
+        <div id="questions"></div>
+    </div>
+    <div style="text-align: center;">
+        <div id="questions"><br></div>
+        <div id="answers"></div>
+    </div>
+    <footer></footer>
+    <script src="./assets/script.js" ></script>
 </body>
 </html>
