finished html layout

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
         <br>
 
-    <h4 id="timer" >Time left: <br> 40 seconds</h4>
-    
+    <h4 id="timer" >Time left: <span> 40 </span> seconds.</h4>
+
         <br>
 
-    <div class="startQ">
+    <div class="quiz">
         <button id="startquiz" >Start Quiz!</button>
         <div id="questions"></div>
     </div>
